--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
         .tab {
             display: none;
         }
+        .tab input[type="text"] {
+            width: 120px;
+            padding: 5px;
+            margin-bottom: 5;
+        }
+        .tab input[type="number"] {
+            width: 40px;
+            padding: 5px;
+            margin-bottom: 5;
+        }
         .tab.active {
             display: block;
         }
@@ -67,7 +77,7 @@
         </select>
         <label for="challengeValue">Valor de Desafio:</label>
         <input type="number" id="challengeValue" placeholder="Ex: 2">
-        <button onclick="runTest()">Executar Teste</button>
+        <button onclick="runTest()">Executar Teste  <i class="fa-solid fa-play"></i></button>
         <div id="gameResult" class="result"></div>
     </div>
 
@@ -100,7 +110,7 @@
         <label for="balance">Equilíbrio:</label>
         <input type="number" id="balance" placeholder="Ex: 3"><br>
 
-        <button onclick="addPlayer()">Adicionar</button>
+        <button onclick="addPlayer()">Adicionar  <i class="fa-solid fa-user-plus"></i></button>
 
         <ul id="playerList"></ul>
     </div>
@@ -110,7 +120,7 @@
         <h3></h3>
         <label for="monsterCount">Quantidade de Monstros:</label>
         <input type="number" id="monsterCount" placeholder="Ex: 3">
-        <button onclick="calculateInitiative()">Calcular Iniciativa</button>
+        <button onclick="calculateInitiative()">Calcular Iniciativa  <i class="fa-solid fa-play"></i></button>
         <div id="initiativeResult" class="result"></div>
     </div>
 
