--- a/index.html
+++ b/index.html
@@ -6,191 +6,12 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+
+    <link rel="stylesheet" href="css/styles.css">
+
     <title>Game and Players</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        .tabs {
-            display: flex;
-            justify-content: flex-start;
-            margin-bottom: 10px;
-        }
-        .tab-btn {
-            padding: 10px;
-            margin-left: 5px;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            background-color: #f0f0f0;
-            border: none;
-            outline: none;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-        .tabs button i {
-            margin-right: 5px;
-        }
-        .tab-btn:hover {
-            background-color: #ddd;
-        }
-        .tab-btn.active {
-            background-color: #4CAF50;
-            color: white;
-            border: 1px solid #4CAF50;
-        }
-        .tab {
-            display: none;
-        }
-        .tab input[type="text"] {
-            width: 120px;
-            padding: 5px;
-            margin-bottom: 5px;
-        }
-        .tab input[type="number"] {
-            width: 60px;
-            padding: 5px;
-            margin-bottom: 5px;
-        }
-        .tab.active {
-            display: inline-grid;
-        }
-        .result {
-            margin-top: 10px;
-            padding: 10px;
-            border-radius: 5px;
-        }
-        .form-group {
-            display: flex;
-            justify-content: flex-start;
-            margin-bottom: 4px;
-        }
-        .form-group label {
-            width: 150px;
-            text-align: left;
-            padding-right: 4px;
-        }
-        .form-group input {
-            padding-left: 4px;
-            text-align: left;
-        }
-        .remove-btn {
-            padding: 5px;
-            cursor: pointer;
-            align-items: center;
-        }
-        .remove-btn i {
-            margin-right: 5px;
-        }
-        #playerList {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-        }
-        #playerList li {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            width: 150px;
-            padding: 5px;
-            background-color: #f0f0f0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-        #actionPlayers {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-        }
-        #actionPlayers li {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            width: 150px;
-            padding: 5px;
-            background-color: #f0f0f0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-        #actionMonsters {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-        }
-        #actionMonsters li {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            width: 150px;
-            padding: 5px;
-            background-color: #f0f0f0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-        .tab-box {
-            display: inline-block;
-            border: 1px solid #ccc;
-            padding: 10px;
-            background-color: #f9f9f9;
-            margin-bottom: 15px;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        .skill-list {
-            display: grid;
-            grid-template-columns: auto 1fr; 
-            gap: 5px;
-            margin-top: 10px;
-            margin-bottom: 10px;
-        }
-        .skill-list span {
-            margin-left: 5px;
-            text-align: left;
-        }
-        .fancy-divider {
-            width: 100%;
-            max-width: 600px;
-            height: 30px;
-            position: relative;
-            margin: 20px 0;
-        }
-        .fancy-divider::before {
-            content: "";
-            position: absolute;
-            top: 50%;
-            left: 0;
-            right: 0;
-            height: 2px;
-            background: linear-gradient(to right, transparent, #333, transparent);
-        }
-        .fancy-divider::after {
-            content: "\f005";
-            font-family: "Font Awesome 5 Free";
-            font-weight: 900;
-            font-size: 20px;
-            color: #333;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #fff;
-            padding: 0 5px;
-        }
-        .fancy-divider.monster::after {
-            content: "\f54c";
-            font-family: "Font Awesome 5 Free"; 
-            font-weight: 900; 
-        }
-    </style>
+
 </head>
 <body>
 
