--- a/sheet.html
+++ b/sheet.html
@@ -30,33 +30,69 @@
                     <input type="text" id="nome" placeholder="Nome do personagem">
                 </div>
                 <div>
-                    <label for="classe">Classe</label>
-                    <input type="text" id="classe" placeholder="Classe">
-                </div>
-                <div>
                     <label for="nivel">Nível</label>
                     <input type="number" id="nivel" placeholder="Nível">
                 </div>
                 <div>
-                    <label for="raca">Raça</label>
-                    <input type="text" id="raca" placeholder="Raça">
-                </div>
-                <div>
-                    <label for="alinhamento">Alinhamento</label>
-                    <input type="text" id="alinhamento" placeholder="Alinhamento">
-                </div>
-                <div>
-                    <label for="divindade">Divindade</label>
-                    <input type="text" id="divindade" placeholder="Divindade">
-                </div>
-                <div>
                     <label for="sexo">Sexo</label>
-                    <input type="text" id="sexo" placeholder="Sexo">
+                    <select id="sexo">
+                        <option value="Masculino">Masculino</option>
+                        <option value="Feminino">Feminino</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="raca">Raça</label>
+                    <select id="raca">
+                        <option value="Humano">Humano</option>
+                        <option value="">Selecione</option>
+                        <option value="Anão">Anão</option>
+                        <option value="Elfo">Elfo</option>
+                        <option value="Gnomo">Gnomo</option>
+                        <option value="Halfling">Halfling</option>
+                        <option value="Meio-Elfo">Meio-Elfo</option>
+                        <option value="Meio-Orc">Meio-Orc</option>
+                    </select>
                 </div>
                 <div>
                     <label for="idade">Idade</label>
                     <input type="number" id="idade" placeholder="Idade">
                 </div>
+                <div>
+                    <label for="alinhamento">Alinhamento</label>
+                    <select id="alinhamento">
+                        <option value="Leal e Bom">Leal e Bom</option>
+                        <option value="Neutro e Bom">Neutro e Bom</option>
+                        <option value="Caótico e Bom">Caótico e Bom</option>
+                        <option value="Leal e Neutro">Leal e Neutro</option>
+                        <option value="Neutro">Neutro</option>
+                        <option value="Caótico e Neutro">Caótico e Neutro</option>
+                        <option value="Leal e Mal">Leal e Mal</option>
+                        <option value="Neutro e Mal">Neutro e Mal</option>
+                        <option value="Caótico e Mal">Caótico e Mal</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="classe">Classe</label>
+                    <select id="classe">
+                        <option value="">Selecione</option>
+                        <option value="Bárbaro">Bárbaro</option>
+                        <option value="Bardo">Bardo</option>
+                        <option value="Clérigo">Clérigo</option>
+                        <option value="Druida">Druida</option>
+                        <option value="Feiticeiro">Feiticeiro</option>
+                        <option value="Guerreiro">Guerreiro</option>
+                        <option value="Ladino">Ladino</option>
+                        <option value="Mago">Mago</option>
+                        <option value="Monge">Monge</option>
+                        <option value="Paladino">Paladino</option>
+                        <option value="Ranger">Ranger</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="divindade">Divindade</label>
+                    <input type="text" id="divindade" placeholder="Divindade">
+                </div>
+
             </div>
 
             <h2>Atributos</h2>
